added a leaderboard and a game page

--- a/contact.html
+++ b/contact.html
@@ -21,10 +21,10 @@
         </nav>
     </header>
 
-    <a href="#banner"><button id="fixed-button">⏏</button></a>
+    <a href="#contact-banner"><button id="fixed-button">⏏</button></a>
 
     <main>
-        <section id="banner">
+        <section class="banner" id="contact-banner">
             <h2>NOUS CONTACTER</h2>
         </section>
 
