--- a/game.html
+++ b/game.html
@@ -21,20 +21,11 @@
         </nav>
     </header>
 
-    <a href="#login-banner"><button id="fixed-button">⏏</button></a>
+    <a href="#game-banner"><button id="fixed-button">⏏</button></a>
 
     <main>
-        <section class="banner" id="login-banner">
-            <h2>CONNEXION</h2>
-        </section>
-
-        <section id="login-form">
-            <form action="signup.php" method="POST">
-                <input type="email" name="email" id="email" placeholder="Email" required>
-                <input type="password" name="password" id="password" placeholder="Mot de passe" required>
-                <!-- <button type="submit" name="signup-submit">Connexion</button> -->
-            </form>
-            <a href="game.html"><button>Connexion</button></a>
+        <section class="banner" id="game-banner">
+            <h2>JEU</h2>
         </section>
     </main>
 
