--- a/signup.html
+++ b/signup.html
@@ -21,10 +21,10 @@
         </nav>
     </header>
 
-    <a href="#banner"><button id="fixed-button">⏏</button></a>
+    <a href="#signup-banner"><button id="fixed-button">⏏</button></a>
 
     <main>
-        <section id="banner">
+        <section class="banner" id="signup-banner">
             <h2>INSCRIPTION</h2>
         </section>
 
