--- a/main.html
+++ b/main.html
@@ -21,10 +21,10 @@
         </nav>
     </header>
 
-    <a href="#banner"><button id="fixed-button">⏏</button></a>
+    <a href="#homepage-banner"><button id="fixed-button">⏏</button></a>
 
     <main>
-        <section class="landing" id="banner">
+        <section class="banner" id="homepage-banner">
             <h2>BIENVENUE DANS NOTRE STUDIO !</h2>
             <p>Venez challenger les cerveaux les plus agiles !</p>
 
